# lux-mcp

./: .env.example  .gitignore  AGENTS.md  API_REFERENCE.md  BIASED_REASONING_FIX.md  BIASED_REASONING_REDESIGN.md  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  Makefile.toml  QUICKSTART.md  QUICKSTART.old.md  README.md  README.old.md  SETUP_GUIDE.md  TERMINOLOGY.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  check.sh  check_openrouter_models.sh  claude_config_example.json  claude_desktop_config.json  debug_init.sh  full_output.json  full_session.json  lux-mcp-wrapper.sh  mcp.json  opencode.json  openrouter_models_full.json  projectBrief.md  run_clean.sh  setup.sh  setup_database.sh  test_biased_reasoning.sh  (+14 more)
.claude/agents/: advanced-reasoning-architect.md
_archive/test-scripts/: test_biased_reasoning_mcp.sh  test_biased_reasoning_synthesis.sh  test_database.sh  test_db_direct.sh  test_db_integration.sh  test_db_mcp.sh  test_db_simple.sh  test_minimal.json  test_planner_simple.sh  test_planner_synthesis.sh  test_planner_synthesis_mcp.py  test_simple_synthesis.sh  test_synthesis_evolution.sh  test_synthesis_evolution_simple.sh  test_synthesis_interactive.sh  test_threading.sh  (+6 more)
_temp/: MOVED_FILES_INDEX.md  README.md
context_portal/: context.db
crates/lux_synthesis/: Cargo.toml
crates/lux_synthesis/src/: events.rs  lib.rs
crates/lux_synthesis_db/: Cargo.toml
crates/lux_synthesis_db/src/: lib.rs  postgres.rs
docs/: ARCHITECTURE_DECISION.md  DATABASE_ARCHITECTURE.md  README.md  SEAORM_SVELTEKIT_ARCHITECTURE.md  THOUGHT_MODEL_STRUCTURES.md  biased-reasoning.md  confer.md  hybrid-biased-reasoning.md  planner.md  sequential-thinking-api.md  sequential-thinking-comparison.md  sequential-thinking-examples.md  sequential-thinking.md  setup-config-guide.md  traced-reasoning.md
examples/: env-example  mcp-config-example.json
migration/: Cargo.toml
migrations/: 001_initial_schema.sql
research/: GPT5_VS_O3PRO_COMPARISON.md  PERSISTENCE_COMPARISON.md  ZEN_MCP_DEEP_ANALYSIS.md  ZEN_VS_LUX_COMPARISON.md
src/: lib.rs  main.rs  main_old.rs  session.rs
tests/: test_synthesis_integration.rs
(+165 files in other folders)
