[package]
name = "lux-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Lux Team"]
description = "Illuminate your thinking - metacognitive monitoring MCP server in Rust"
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# MCP protocol support
rmcp = { version = "0.2.0", features = ["server", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling  
anyhow = "1"
thiserror = "1"

# Async traits
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Better mutex performance
parking_lot = "0.12"

# Text processing for circular reasoning detection
unicode-segmentation = "1.10"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Environment variables
dotenv = "0.15"

# Configuration
config = "0.13"

# Hashing for session IDs
sha2 = "0.10"
hex = "0.4"
