[package]
name = "lux_synthesis"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }