[package]
name = "lux_synthesis_db"
version = "0.1.0"
edition = "2021"

[dependencies]
lux_synthesis = { path = "../lux_synthesis" }
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
async-trait = "0.1"
anyhow = "1.0"
tracing = "0.1"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["postgres"]
postgres = []